[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "qlgv"
version = "0.1.0"
description = "Quantum Local Gradient Variance Toolkit for analyzing trainability of Variational Quantum Circuits"
authors = [
    {name = "AHDMarwan", email = "your.email@example.com"},
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "pennylane>=0.28.0",
    "torch>=1.9.0",
    "numpy>=1.19.0",
    "pandas>=1.1.0",
]
keywords = ["quantum computing", "variational circuits", "gradient variance", "trainability"]

[project.urls]
Homepage = "https://github.com/AHDMarwan/qlgv"
"Bug Reports" = "https://github.com/AHDMarwan/qlgv/issues"
Source = "https://github.com/AHDMarwan/qlgv"
